Add initial family website files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="80">
     <tr>
-      <td><img src="\html\HTML - Personal Site\circle-cropped (1).png" alt="image" height="500" width="500"></td>
+      <td><img src="circle-cropped (1).png" alt="image" height="500" width="500"></td>
       <td>
         <h1><strong>A TRIBUTE TO A GREAT FATHER !</strong></h1>
         <p><em>
