--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <tr>
       <td><img src="circle-cropped (1).png" alt="image" height="500" width="500"></td>
       <td>
-        <h1><strong>A TRIBUTE TO A GREAT FATHER !</strong></h1>
+        <h1><strong>A TRIBUTE TO A GREAT FATHER !</strong></h1><br>
+        <hr>
         <p><em>
             <h4>The whole and Soul of <strong>Upadhyay family</strong>..</h4>
           </em></p>
